# agent-ops-maturity

./: .gitignore  README.md  requirements-dev.txt
.github/workflows/: cd.yml  (+2 more)
agents/: README.md
agents/brand-guidelines-checker/: __init__.py  agent.yaml  agents-cli-manifest.yaml  pyproject.toml  requirements.txt
agents/brand-guidelines-checker/app/: agent.py
agents/brand-guidelines-checker/app/app_utils/: telemetry.py  typing.py
agents/brand-guidelines-checker/eval/: criteria.json  golden.evalset.json  weak_instruction.txt
agents/brand-guidelines-checker/observability/: alert.yaml  canary_alert.yaml  dashboard.json  metric.yaml  monitor.yaml
cicd/: .terraform.lock.hcl  README.md  pipeline.tf  pipeline.yml.tftpl  pipeline_vars.tf  terraform.tfvars.example  versions.tf  wif.tf
configs/: defaults.yaml
deployment/: create_online_monitor.py  deploy_agent.py  register_agent.py  rollback.py  teardown_agent.py
eval_tool/: README.md  compare.py  managed_eval.py  run_eval.py
loop/: README.md  gepa_optimize.py  hillclimb_model.py  hillclimb_prompt.py  run_ct_loop.py
my-test-agent/: README.md  agents-cli-manifest.yaml
notebooks/: 01-deploy-agent.ipynb  02-continuous-evaluation.ipynb  03-feedback-loop-trigger.ipynb  04-canary-rollback.ipynb  05-ci-tests.ipynb  06-cd-pipeline.ipynb  07-teardown.ipynb
skills/: add-agent.md
terraform/: .terraform.lock.hcl  apis.tf  main.tf  notifications.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: conftest.py  test_agents.py  test_detect_changed_agents.py  test_framework.py  test_identity.py
(+19 files in other folders)
