[project]
name = "brand-guidelines-checker"
version = "0.1.0"
description = "Agent Ops L1 example — retail brand-guidelines checker."
requires-python = ">=3.10,<3.14"
dependencies = [
    "google-adk>=1.15.0,<2.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.150.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "gcsfs>=2024.11.0",
]

[project.optional-dependencies]
eval = [
    "google-adk[eval]>=1.15.0,<2.0.0",
    "google-cloud-aiplatform[evaluation]>=1.150.0",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=1.0.0", "nest-asyncio>=1.6.0"]
